feat: add edit and add vehicles

--- a/apps/client/src/app/pages/home/home.component.html
+++ b/apps/client/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <page-layout [hasTabBar]="true">
-	<div>Conductor? 🤨</div>
+	<div>Conductor</div>
 	<label class="switch">
 		<input type="checkbox" [checked]="isUserRoleToggleChecked" (change)="handleUserRoleToggle($event)">
 		<span class="slider round"></span>
