--- a/apps/client/src/app/shared/ui/components/card-vehicle/card-vehicle.component.html
+++ b/apps/client/src/app/shared/ui/components/card-vehicle/card-vehicle.component.html
@@ -14,7 +14,8 @@
 			</div>
 			<div class="card-buttons-container">
 				<button mButton severity="tertiary" size="small" (click)="handleDelete(vehicle!.id)">Eliminar</button>
-				<button mButton severity="contrast" size="small" routerLink="/app/my-vehicle/edit">Editar</button>
+				<button mButton severity="contrast" size="small"
+					(click)="navigateToEditPage(vehicle!.id)">Editar</button>
 			</div>
 		</div>
 	</div>
