feat: add mapMarker in location selector map

--- a/apps/client/src/app/features/maps/components/location-selector-map/location-selector-map.component.html
+++ b/apps/client/src/app/features/maps/components/location-selector-map/location-selector-map.component.html
@@ -1,3 +1,6 @@
-<iframe width="100%" height="100%" frameborder="0" style="border:0;" referrerpolicy="no-referrer-when-downgrade"
+<!-- <iframe width="100%" height="100%" frameborder="0" style="border:0;" referrerpolicy="no-referrer-when-downgrade"
 	[src]="mapSrc" allowfullscreen>
-</iframe>
+</iframe> -->
+<google-map height="100%" width="100%" [center]="center" [zoom]="zoom" (mapClick)="addMarker($event)">
+	<map-marker [position]="markerPosition" [options]="markerOptions" />
+</google-map>
