feat: initialize map in own location

--- a/apps/client/src/app/features/maps/components/location-selector-map/location-selector-map.component.html
+++ b/apps/client/src/app/features/maps/components/location-selector-map/location-selector-map.component.html
@@ -1,6 +1,8 @@
 <!-- <iframe width="100%" height="100%" frameborder="0" style="border:0;" referrerpolicy="no-referrer-when-downgrade"
 	[src]="mapSrc" allowfullscreen>
 </iframe> -->
-<google-map height="100%" width="100%" [center]="center" [zoom]="zoom" (mapClick)="addMarker($event)">
+<google-map height="100%" width="100%" [options]="options" [center]="center" (mapClick)="addMarker($event)">
+	@if (markerPosition) {
 	<map-marker [position]="markerPosition" [options]="markerOptions" />
+	}
 </google-map>
