feat: add modal component

--- a/apps/client/src/app/pages/home/home.component.html
+++ b/apps/client/src/app/pages/home/home.component.html
@@ -4,4 +4,5 @@
 		<input type="checkbox" [checked]="isUserRoleToggleChecked" (change)="handleUserRoleToggle($event)">
 		<span class="slider round"></span>
 	</label>
+	<modal />
 </page-layout>
