feat: add icon header in modal component

--- a/apps/client/src/app/pages/home/home.component.html
+++ b/apps/client/src/app/pages/home/home.component.html
@@ -4,5 +4,7 @@
 		<input type="checkbox" [checked]="isUserRoleToggleChecked" (change)="handleUserRoleToggle($event)">
 		<span class="slider round"></span>
 	</label>
-	<modal />
+	<modal>
+		<p class="paragraph-medium">hola esto es un ejemplo de como es un ng content</p>
+	</modal>
 </page-layout>
