--- a/apps/client/src/app/shared/ui/components/modal/modal.component.html
+++ b/apps/client/src/app/shared/ui/components/modal/modal.component.html
@@ -1,11 +1,16 @@
 <div>
 	<div class="container open" [class.close]="!show">
 		<div class="header">
-			<h1 class="label-large">titulo</h1>
-			<button mButton size="small" (click)="onClose()">Close</button>
+			<div class="title-with-icon">
+				<img [src]="srcIcon" class="icon" />
+				<h1 class="label-large">titulo</h1>
+			</div>
+			<span (click)="onClose()">
+				<img src="assets/svgs/Cancel.svg" class="icon" />
+			</span>
 		</div>
 		<div class="content">
-			<p class="paragraph-medium">hola este es un modal en donde puedes colocar algunas cosas</p>
+			<ng-content></ng-content>
 		</div>
 		<div class="container-button">
 			<button mButton size="small">Cancelar</button>
