feat(login): register redirection

--- a/apps/client/src/app/pages/auth/login/login.component.html
+++ b/apps/client/src/app/pages/auth/login/login.component.html
@@ -16,6 +16,6 @@
 		<a href="/" [style.margin-top]="'2.5rem'">He olvidado mi contraseña</a>
 
 		<!-- TODO: put transparent button whit dark text here -->
-		<button mButton [style.margin-top]="'2.625rem'" severity="contrast">Registrarme</button>
+		<button mButton [style.margin-top]="'2.625rem'" severity="contrast" (click)="goToRegister()">Registrarme</button>
 	</section>
 </page-layout>
