--- a/apps/client/src/app/pages/profile/profile.component.html
+++ b/apps/client/src/app/pages/profile/profile.component.html
@@ -88,7 +88,7 @@
 	</section>
 
 	<section class="action-buttons-container">
-		<button mButton size="large" severity="primary"> Cerrar Sesión</button>
+		<button mButton size="large" severity="primary" (click)="logout()"> Cerrar Sesión</button>
 		<button mButton appearance="outlined" size="large"> Desactivar Cuenta</button>
 	</section>
 
