feat(lotties): add lotties (fu paula)

--- a/apps/client/src/app/pages/auth/auth.component.html
+++ b/apps/client/src/app/pages/auth/auth.component.html
@@ -1,6 +1,6 @@
 <brand-logo size="large" />
 
-<!-- <ng-lottie [options]="options" width="15rem" /> -->
+<ng-lottie [options]="options" width="15rem" />
 
 <div class="options-container">
 	<button mButton severity="contrast" appearance="filled" size="large" (click)="goToLogin()">Iniciar
