--- a/apps/client/src/app/pages/auth/successful-email-verification/successful-email-verification.component.html
+++ b/apps/client/src/app/pages/auth/successful-email-verification/successful-email-verification.component.html
@@ -2,6 +2,8 @@
 
 <h1 class="heading-xsmall" [style.margin-top]="'4.5rem'">Verificación enviada de forma exitosa</h1>
 
+<ng-lottie [options]="options" width="15rem" />
+
 <p class="paragraph-large">Se ha enviado a su correo electrónico un link en donde podrá continuar con el proceso de
 	registro. ¡Muchas gracias
 	por escoger MoviC!</p>
