--- a/apps/client/src/app/pages/my-destinations/my-destinations.component.html
+++ b/apps/client/src/app/pages/my-destinations/my-destinations.component.html
@@ -1,3 +1,8 @@
 <main class="container">
 	<location-selector-map></location-selector-map>
+	<modal tittle="Seleccionar ubicación" srcIcon="assets/svgs/MapsLocation.svg" class="modal">
+		<p class="paragraph-medium">Toca la pantalla para que se seleccione la ubicación deseada, luego podrás guardar
+			la ubicación como tu
+			destino el cual podrás utilizar al pedir cola.</p>
+	</modal>
 </main>
