--- a/apps/client/src/app/shared/ui/components/modal/modal.component.css
+++ b/apps/client/src/app/shared/ui/components/modal/modal.component.css
@@ -1,16 +1,15 @@
 .container {
 	width: 20.375rem;
+	position: fixed;
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	background-color: var(--contrast-surface-subtle);
 	padding: 1rem 1.1875rem;
 	border-radius: var(--radius-sm);
-	z-index: 101;
-	position: absolute;
+	z-index: 4000;
 	display: block;
 	transition: all 5s ease-in-out;
-}
-
-.open {
-	display: block;
 }
 
 .close {
@@ -52,16 +51,13 @@
 .overlay {
 	position: fixed;
 	top: 0;
-	bottom: 0;
 	left: 0;
-	right: 0;
-	background: rgba(0, 0, 0, 0.7);
-	transition: opacity 500ms;
-	visibility: hidden;
-	opacity: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(0 0 0 / 30%);
+	z-index: 100;
 }
 
-.overlay:target {
-	visibility: visible;
-	opacity: 1;
+.content {
+	padding-top: .875rem;
 }
