feat: new input width

--- a/apps/client/src/app/pages/my-destinations/my-destinations.component.html
+++ b/apps/client/src/app/pages/my-destinations/my-destinations.component.html
@@ -13,7 +13,7 @@
 		srcIcon="assets/svgs/Save.svg">
 		<form formGroup="formGroup" style="padding-top: 0.8rem;">
 			<text-input inputId="destination-name" type="text" placeholder="Ingrese un nombre" label="Nombre de mi destino"
-				[control]="ubicationNameControl" />
+				[control]="ubicationNameControl" width="full" />
 		</form>
 	</modal>
 </main>
