--- a/apps/client/src/app/pages/my-destinations/my-destinations.component.css
+++ b/apps/client/src/app/pages/my-destinations/my-destinations.component.css
@@ -1,8 +1,8 @@
-.container {
+/* .container {
 	width: 100%;
 	height: calc(100dvh - 5.3rem);
 }
 
 .modal p {
 	color: var(--primary-text-label);
-}
+} */
