--- a/apps/client/src/app/features/my-destinations/components/card-my-destination/card-my-destination.component.html
+++ b/apps/client/src/app/features/my-destinations/components/card-my-destination/card-my-destination.component.html
@@ -1,13 +1,8 @@
 <section>
 	<div class="card-destination-container">
-		<div class="map-view">
-			<!-- <button mButton size="small">Ver</button> -->
-			<iframe width="100%" height="100%" frameborder="0" style="border:0"
-				referrerpolicy="no-referrer-when-downgrade"
-				src="https://www.google.com/maps/embed/v1/view?key=AIzaSyCUVOx-Go8NMxXnFSmMHdPebiV64M-J8Fg&center=37.4218,-122.0840"
-				allowfullscreen>
-			</iframe>
-		</div>
+		<button mButton size="small">Ver</button>
+		<img src="https://maps.googleapis.com/maps/api/staticmap?center=Berkeley,CA&zoom=14&size=400x400&key="
+			alt="map">
 		<div class="card-destination-information">
 			<h2 class="heading-xsmall destination-name">Urbanización Isla Dorada</h2>
 			<div class="card-buttons-container">
