--- a/apps/client/src/app/pages/my-destinations/my-destinations.component.css
+++ b/apps/client/src/app/pages/my-destinations/my-destinations.component.css
@@ -1,8 +1,23 @@
-/* .container {
-	width: 100%;
-	height: calc(100dvh - 5.3rem);
+:host {
+	padding-top: 2rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 2rem;
 }
 
-.modal p {
-	color: var(--primary-text-label);
-} */
+header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	min-width: 21.0625rem;
+	padding: 0 1rem;
+}
+
+.destinations-list {
+	margin-top: 1.5rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1.5rem;
+}
