--- a/apps/client/src/app/features/my-destinations/components/card-my-destination/card-my-destination.component.css
+++ b/apps/client/src/app/features/my-destinations/components/card-my-destination/card-my-destination.component.css
@@ -1,7 +1,6 @@
 .card-destination-container {
 	position: relative;
-	border-radius: 16px;
-	border: 1px solid #efefef;
+	border-radius: 1rem;
 }
 
 img {
@@ -19,13 +18,15 @@ img {
 	flex-direction: column;
 	gap: 1.4375rem;
 	padding: 0 .875rem;
-	padding-top: 1.125rem;
+	padding-top: 1.0rem;
 	padding-bottom: 1.375rem;
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	z-index: 1;
-	backdrop-filter: blur(5px);
+	background-color: rgb(255 255 255 / 40%);
+	backdrop-filter: blur(.75rem);
+	border-bottom-left-radius: 1rem;
+	border-bottom-right-radius: 1rem;
 }
 
 .destination-name {
