--- a/apps/client/src/app/pages/my-vehicles/my-vehicles.component.html
+++ b/apps/client/src/app/pages/my-vehicles/my-vehicles.component.html
@@ -1,10 +1,11 @@
 <page-layout [hasTabBar]="true">
 	<header>
 		<h1 class="heading-xsmall">Administrar vehículos</h1>
-		@if(ownVehiclesQuantity !== 3) {
-		<button mButton severity="contrast" size="small" routerLink="/app/my-vehicle/add">Agregar</button>
-		}
+		@if(ownVehiclesQuantity < 3) { <button mButton severity="contrast" size="small"
+			routerLink="/app/my-vehicle/add">Agregar</button>
+			}
 	</header>
+	<p class="paragraph-medium vehicle-counter">{{ownVehiclesQuantity}} de 3 vehículos para agregar</p>
 
 	<section>
 		@for (vehicle of myVehicles; track vehicle.id) {
