--- a/apps/client/src/app/pages/my-destinations/my-destinations.component.css
+++ b/apps/client/src/app/pages/my-destinations/my-destinations.component.css
@@ -1,10 +1,10 @@
-:host {
+/* :host {
 	padding-top: 2rem;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	gap: 2rem;
-}
+} */
 
 header {
 	display: flex;
@@ -13,6 +13,7 @@ header {
 	width: 100%;
 	min-width: 21.0625rem;
 	padding: 0 1rem;
+	padding-top: 3.625rem;
 }
 
 .destinations-list {
@@ -20,4 +21,12 @@ header {
 	display: flex;
 	flex-direction: column;
 	gap: 1.5rem;
+}
+
+.destination-counter {
+	text-align: start;
+	color: var(--primary-text-value);
+	width: 100%;
+	padding-top: .625rem;
+	padding-left: 1rem;
 }
