--- a/apps/client/src/app/pages/my-vehicles/my-vehicles.component.css
+++ b/apps/client/src/app/pages/my-vehicles/my-vehicles.component.css
@@ -14,6 +14,14 @@ header {
 	justify-content: space-between;
 	align-items: center;
 	padding-top: 3.625rem;
-	padding-bottom: 1.875rem;
 	width: 100%;
+	min-width: 21.0625rem;
+}
+
+.vehicle-counter {
+	text-align: start;
+	color: var(--primary-text-value);
+	width: 100%;
+	padding-bottom: 1.875rem;
+	padding-top: .625rem;
 }
