feat: offer travel and view travels pages

--- a/apps/client/src/app/core/components/tab-bar/passenger-tab-bar/tab-bar.component.html
+++ b/apps/client/src/app/core/components/tab-bar/passenger-tab-bar/tab-bar.component.html
@@ -3,10 +3,10 @@
 
 
 <div class="middle-space">
-	<div class="main-circle">
+	<a class="main-circle" routerLink="/app/travel-type-selection">
 		<div class="circle-icon" [style]="{mask: 'url(\'assets/svgs/Hand.svg\') no-repeat center', 'mask-size': '2.25rem'}">
 		</div>
-	</div>
+	</a>
 	<div class="outline-circle"></div>
 	<div class="circle-background"></div>
 </div>
