--- a/apps/client/src/app/pages/travel-type-selection/travel-type-selection.component.css
+++ b/apps/client/src/app/pages/travel-type-selection/travel-type-selection.component.css
@@ -4,6 +4,21 @@ h1 {
 	width: 100%;
 }
 
+.card {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-decoration: none;
+	color: var(--text-color);
+	width: 100%;
+	border-radius: 20px;
+	border: 3px solid #bab3c7;
+	cursor: pointer;
+	height: 14rem;
+	gap: 0.5rem;
+}
+
 .cards-container {
 	display: flex;
 	justify-content: center;
@@ -13,16 +28,18 @@ h1 {
 	margin-top: 2rem;
 }
 
-.type-card {
-	text-decoration: none;
-	color: var(--text-color);
+.card-info {
 	width: 100%;
-	height: 14rem;
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
-	border-radius: 20px;
-	border: 3px solid #bab3c7;
-	transition: all 0.3s;
-	cursor: pointer;
+}
+
+.icon {
+	min-width: 2.25rem;
+	min-height: 2.25rem;
+}
+
+.image {
+	min-height: 8.125rem;
 }
