--- a/apps/client/src/app/pages/travel-type-selection/travel-type-selection.component.html
+++ b/apps/client/src/app/pages/travel-type-selection/travel-type-selection.component.html
@@ -1,46 +1,26 @@
 <page-layout [hasTabBar]="true">
 	<h1 class="heading-small">Modalidad de viaje</h1>
 	<section class="cards-container">
-		<a class="type-card heading-xsmall" [routerLink]="routeToRedirect">
-			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="36" height="36" color="#1d2b69" fill="none">
-				<path d="M2 22H21.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-				<path d="M3 13V22M21 13V22" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-					stroke-linejoin="round" />
-				<path d="M7.5 8V22M16.5 8V22" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-					stroke-linejoin="round" />
-				<path d="M2 13H7M22 13H17" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-					stroke-linejoin="round" />
-				<path d="M6.5 8H17.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-				<path
-					d="M12 8V4.98221M12 4.98221V2.97035C12 2.49615 12 2.25905 12.1464 2.11173C12.6061 1.64939 14.5 2.74303 15.2203 3.18653C15.8285 3.56105 16 4.30914 16 4.98221H12Z"
-					stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-				<path d="M12 22L12 20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-					stroke-linejoin="round" />
-				<path d="M10.5 12L10.5 12.5M13.5 12V12.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-					stroke-linejoin="round" />
-				<path d="M10.5 16L10.5 16.5M13.5 16V16.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-					stroke-linejoin="round" />
-			</svg>
+		<a class="card" [routerLink]="routeToRedirect">
 
-			UCAB → Destino Externo
+			<img class="image" src="/assets/svgs/UcabToExternal.svg" alt="" />
+
+			<div class="card-info heading-xsmall">
+				<img class="icon" src="/assets/svgs/University.svg" alt="" />
+
+				UCAB → Destino Externo
+			</div>
 		</a>
 
-		<a class="type-card heading-xsmall" [routerLink]="routeToRedirect">
-			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="36" height="36" color="#1d2b69" fill="none">
-				<path
-					d="M13 16.7033C13 15.7854 13 15.3265 13.2034 14.9292C13.4067 14.5319 13.7859 14.2501 14.5442 13.6866L15.0442 13.315C16.2239 12.4383 16.8138 12 17.5 12C18.1862 12 18.7761 12.4383 19.9558 13.315L20.4558 13.6866C21.2141 14.2501 21.5933 14.5319 21.7966 14.9292C22 15.3265 22 15.7854 22 16.7033V18.1782C22 19.9798 22 20.8806 21.4142 21.4403C20.8284 22 19.8856 22 18 22H13V16.7033Z"
-					stroke="currentColor" stroke-width="1.5" stroke-linejoin="round" />
-				<path d="M18 12.0002V5C18 2.518 17.482 2 15 2H11C8.518 2 8 2.518 8 5V22" stroke="currentColor"
-					stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-				<ellipse cx="3.5" cy="14" rx="1.5" ry="2" stroke="currentColor" stroke-width="1.5" />
-				<path d="M3.5 16V22" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
-				<path d="M2 22H20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
-				<path d="M12 6H14M12 9H14" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" />
-				<path d="M17.5 22L17.5 20" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
-					stroke-linejoin="round" />
-			</svg>
+		<a class="card" [routerLink]="routeToRedirect">
 
-			Destino Externo → UCAB
+			<img class="image" src="/assets/svgs/ExternalToUcab.svg" alt="" />
+
+			<div class="card-info heading-xsmall">
+				<img class="icon" src="/assets/svgs/City.svg" alt="" />
+
+				Destino Externo → UCAB
+			</div>
 		</a>
 	</section>
 </page-layout>
