fix: improve travel type cards design

--- a/apps/client/src/app/pages/travel-type-selection/travel-type-selection.component.html
+++ b/apps/client/src/app/pages/travel-type-selection/travel-type-selection.component.html
@@ -8,7 +8,11 @@
 			<div class="card-info heading-xsmall">
 				<img class="icon" src="/assets/svgs/University.svg" alt="" />
 
-				UCAB → Destino Externo
+				<div>
+					<h3>UCAB → Destino Externo</h3>
+					<p class="label-small">Servicio de movilidad con un punto inicial en la UCAB y punto final un destino Externo.
+					</p>
+				</div>
 			</div>
 		</a>
 
@@ -19,7 +23,10 @@
 			<div class="card-info heading-xsmall">
 				<img class="icon" src="/assets/svgs/City.svg" alt="" />
 
-				Destino Externo → UCAB
+				<div>
+					<h3>Destino Externo → UCAB</h3>
+					<p class="label-small">Servicio de movilidad con un punto inicial externo y punto final la UCAB.</p>
+				</div>
 			</div>
 		</a>
 	</section>
