--- a/apps/client/src/app/pages/travel-type-selection/travel-type-selection.component.css
+++ b/apps/client/src/app/pages/travel-type-selection/travel-type-selection.component.css
@@ -4,6 +4,14 @@ h1 {
 	width: 100%;
 }
 
+p {
+	color: var(--primary-text-placeholder);
+	margin-top: .25rem;
+	margin-bottom: 2.0625rem;
+	margin-right: 1.125rem;
+	text-wrap: pretty;
+}
+
 .card {
 	display: flex;
 	flex-direction: column;
@@ -15,7 +23,6 @@ h1 {
 	border-radius: 20px;
 	border: 3px solid #bab3c7;
 	cursor: pointer;
-	height: 14rem;
 	gap: 0.5rem;
 }
 
@@ -31,15 +38,19 @@ h1 {
 .card-info {
 	width: 100%;
 	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
+	justify-content: center;
+	align-items: start;
+	gap: 1rem;
 }
 
 .icon {
 	min-width: 2.25rem;
 	min-height: 2.25rem;
+	margin-left: 1.1875rem;
 }
 
 .image {
+	margin-bottom: 1.125rem;
+	margin-top: 2rem;
 	min-height: 8.125rem;
 }
