feat: advance driver card

--- a/apps/client/src/app/pages/travel-type-selection/travel-type-selection.component.html
+++ b/apps/client/src/app/pages/travel-type-selection/travel-type-selection.component.html
@@ -1,7 +1,7 @@
 <page-layout [hasTabBar]="true">
 	<h1 class="heading-small">Modalidad de viaje</h1>
 	<section class="cards-container">
-		<a class="card" [routerLink]="routeToRedirect">
+		<a class="card" [routerLink]="ucabToExternalRouteToRedirect">
 
 			<img class="image" src="/assets/svgs/UcabToExternal.svg" alt="" />
 
@@ -16,7 +16,7 @@
 			</div>
 		</a>
 
-		<a class="card" [routerLink]="routeToRedirect">
+		<a class="card" [routerLink]="externalToUcabRouteToRedirect">
 
 			<img class="image" src="/assets/svgs/ExternalToUcab.svg" alt="" />
 
