feat: driver card styles

--- a/apps/client/src/app/pages/available-drivers/available-drivers.component.css
+++ b/apps/client/src/app/pages/available-drivers/available-drivers.component.css
@@ -11,8 +11,35 @@ ul {
 	width: 100%;
 }
 
+section {
+	display: flex;
+	width: 100%;
+	flex-direction: column;
+	justify-content: center;
+}
+
 .card {
 	border-radius: 16px;
+	padding: 0 .6rem;
 	border: 3px solid #bab3c7;
 	width: 100%;
+	display: flex;
+	margin-top: 1rem;
+	justify-content: center;
+	align-items: center;
+	gap: 1rem;
+}
+
+.card-row {
+	display: flex;
+	justify-content: left;
+	align-items: center;
+	gap: 0.6rem;
+}
+
+.avatar {
+	width: 2.9375rem;
+	aspect-ratio: 1;
+	border-radius: 100%;
+	margin: 0.5rem 0;
 }
