--- a/apps/client/src/app/pages/available-drivers/available-drivers.component.html
+++ b/apps/client/src/app/pages/available-drivers/available-drivers.component.html
@@ -1,19 +1,60 @@
 <page-layout [hasTabBar]="true">
-  <h1 class="heading-small">Lista de conductores</h1>
+	<h1 class="heading-small">Lista de conductores</h1>
 
-  <ul>
-    <li class="card">
-      <!-- AVATAR -->
-      <div>
-        <span>María Paula Forero Pardo</span>
-        <span>4.8 (60)</span>
-      </div>
+	<ul>
+		<li class="card">
+			<!-- AVATAR -->
 
-      <div>
-        <span>50 metros</span>
-        <span>70% de emparejamiento</span>
-      </div>
-    </li>
-  </ul>
+			<img class="avatar" src="/assets/svgs/University.svg" alt="Imágen del conductor" />
+
+			<section>
+				<div class="card-row label-medium">
+					<span>María Paula Forero Pardo</span>
+					<span>4.8 (60)</span>
+				</div>
+
+				<div class="card-row paragraph-xsmall">
+					<span>50 metros</span>
+					<span>70% de emparejamiento</span>
+				</div>
+			</section>
+		</li>
+
+		<li class="card">
+			<!-- AVATAR -->
+
+			<img class="avatar" src="/assets/svgs/University.svg" alt="Imágen del conductor" />
+
+			<section>
+				<div class="card-row label-medium">
+					<span>María Paula Forero Pardo</span>
+					<span>4.8 (60)</span>
+				</div>
+
+				<div class="card-row paragraph-xsmall">
+					<span>50 metros</span>
+					<span>70% de emparejamiento</span>
+				</div>
+			</section>
+		</li>
+
+		<li class="card">
+			<!-- AVATAR -->
+
+			<img class="avatar" src="/assets/svgs/University.svg" alt="Imágen del conductor" />
+
+			<section>
+				<div class="card-row label-medium">
+					<span>María Paula Forero Pardo</span>
+					<span>4.8 (60)</span>
+				</div>
+
+				<div class="card-row paragraph-xsmall">
+					<span>50 metros</span>
+					<span>70% de emparejamiento</span>
+				</div>
+			</section>
+		</li>
+	</ul>
 
 </page-layout>
