feat: add styles in driver´s cards in available drivers components

--- a/apps/client/src/app/pages/available-drivers/available-drivers.component.html
+++ b/apps/client/src/app/pages/available-drivers/available-drivers.component.html
@@ -2,20 +2,31 @@
 	<h1 class="heading-small">Lista de conductores</h1>
 
 	<ul>
+
 		<li class="card">
 			<!-- AVATAR -->
 
-			<img class="avatar" src="/assets/svgs/University.svg" alt="Imágen del conductor" />
+			<img class="avatar" src="/assets/images/DriverPhoto.png" alt="Imágen del conductor" />
 
 			<section>
 				<div class="card-row label-medium">
-					<span>María Paula Forero Pardo</span>
-					<span>4.8 (60)</span>
+					<span class="driver-name">María Paula Forero</span>
+					<div class="rating-information">
+						<img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating">
+						<span class="card-information">4.8 (60)</span>
+					</div>
 				</div>
 
 				<div class="card-row paragraph-xsmall">
-					<span>50 metros</span>
-					<span>70% de emparejamiento</span>
+					<div class="card-information">
+						<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg"
+							alt="icono de distancia a caminar">
+						<span class="card-information-title">50 metros</span>
+					</div>
+					<div class="card-information">
+						<img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento">
+						<span class="card-information-title">70% de emparejamiento</span>
+					</div>
 				</div>
 			</section>
 		</li>
@@ -23,38 +34,58 @@
 		<li class="card">
 			<!-- AVATAR -->
 
-			<img class="avatar" src="/assets/svgs/University.svg" alt="Imágen del conductor" />
+			<img class="avatar" src="/assets/images/DriverPhoto.png" alt="Imágen del conductor" />
 
 			<section>
 				<div class="card-row label-medium">
-					<span>María Paula Forero Pardo</span>
-					<span>4.8 (60)</span>
+					<span class="driver-name">María Paula Forero</span>
+					<div class="rating-information">
+						<img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating">
+						<span class="card-information">4.8 (60)</span>
+					</div>
 				</div>
 
 				<div class="card-row paragraph-xsmall">
-					<span>50 metros</span>
-					<span>70% de emparejamiento</span>
+					<div class="card-information">
+						<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg"
+							alt="icono de distancia a caminar">
+						<span class="card-information-title">50 metros</span>
+					</div>
+					<div class="card-information">
+						<img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento">
+						<span class="card-information-title">70% de emparejamiento</span>
+					</div>
 				</div>
 			</section>
 		</li>
-
 		<li class="card">
 			<!-- AVATAR -->
 
-			<img class="avatar" src="/assets/svgs/University.svg" alt="Imágen del conductor" />
+			<img class="avatar" src="/assets/images/DriverPhoto.png" alt="Imágen del conductor" />
 
 			<section>
 				<div class="card-row label-medium">
-					<span>María Paula Forero Pardo</span>
-					<span>4.8 (60)</span>
+					<span class="driver-name">María Paula Forero</span>
+					<div class="rating-information">
+						<img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating">
+						<span class="card-information">4.8 (60)</span>
+					</div>
 				</div>
 
 				<div class="card-row paragraph-xsmall">
-					<span>50 metros</span>
-					<span>70% de emparejamiento</span>
+					<div class="card-information">
+						<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg"
+							alt="icono de distancia a caminar">
+						<span class="card-information-title">50 metros</span>
+					</div>
+					<div class="card-information">
+						<img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento">
+						<span class="card-information-title">70% de emparejamiento</span>
+					</div>
 				</div>
 			</section>
 		</li>
+
 	</ul>
 
 </page-layout>
