--- a/apps/client/src/app/pages/available-drivers/available-drivers.component.css
+++ b/apps/client/src/app/pages/available-drivers/available-drivers.component.css
@@ -43,3 +43,31 @@ section {
 	border-radius: 100%;
 	margin: 0.5rem 0;
 }
+
+.driver-name {
+	color: var(--primary-text-value);
+}
+
+.card-information-title {
+	color: var(--primary-text-placeholder);
+}
+
+.rating-information {
+	display: flex;
+	align-items: center;
+	gap: .1875rem;
+}
+
+.rating-icon {
+	width: 1.25rem;
+}
+
+.card-information {
+	display: flex;
+	align-items: center;
+	gap: .1875rem;
+}
+
+.card-information-icon {
+	width: var(--icon-s);
+}
