feat: only woman checkbox

--- a/apps/client/src/app/pages/available-drivers/available-drivers.component.html
+++ b/apps/client/src/app/pages/available-drivers/available-drivers.component.html
@@ -1,90 +1,19 @@
 <page-layout [hasTabBar]="true">
 	<h1 class="heading-small">Lista de conductores</h1>
 
+	<div class="checkbox-container">
+		<label class="only-woman-label">
+			<input class="only-woman-checkbox" type="checkbox" />
+			Solo mujeres en el viaje</label>
+	</div>
+
 	<ul>
 
-		<li class="card">
-			<!-- AVATAR -->
-
-			<img class="avatar" src="/assets/images/DriverPhoto.png" alt="Imágen del conductor" />
-
-			<section>
-				<div class="card-row label-medium">
-					<span class="driver-name">María Paula Forero</span>
-					<div class="rating-information">
-						<img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating">
-						<span class="card-information">4.8 (60)</span>
-					</div>
-				</div>
-
-				<div class="card-row paragraph-xsmall">
-					<div class="card-information">
-						<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg"
-							alt="icono de distancia a caminar">
-						<span class="card-information-title">50 metros</span>
-					</div>
-					<div class="card-information">
-						<img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento">
-						<span class="card-information-title">70% de emparejamiento</span>
-					</div>
-				</div>
-			</section>
-		</li>
-
-		<li class="card">
-			<!-- AVATAR -->
-
-			<img class="avatar" src="/assets/images/DriverPhoto.png" alt="Imágen del conductor" />
-
-			<section>
-				<div class="card-row label-medium">
-					<span class="driver-name">María Paula Forero</span>
-					<div class="rating-information">
-						<img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating">
-						<span class="card-information">4.8 (60)</span>
-					</div>
-				</div>
-
-				<div class="card-row paragraph-xsmall">
-					<div class="card-information">
-						<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg"
-							alt="icono de distancia a caminar">
-						<span class="card-information-title">50 metros</span>
-					</div>
-					<div class="card-information">
-						<img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento">
-						<span class="card-information-title">70% de emparejamiento</span>
-					</div>
-				</div>
-			</section>
-		</li>
-		<li class="card">
-			<!-- AVATAR -->
-
-			<img class="avatar" src="/assets/images/DriverPhoto.png" alt="Imágen del conductor" />
-
-			<section>
-				<div class="card-row label-medium">
-					<span class="driver-name">María Paula Forero</span>
-					<div class="rating-information">
-						<img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating">
-						<span class="card-information">4.8 (60)</span>
-					</div>
-				</div>
-
-				<div class="card-row paragraph-xsmall">
-					<div class="card-information">
-						<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg"
-							alt="icono de distancia a caminar">
-						<span class="card-information-title">50 metros</span>
-					</div>
-					<div class="card-information">
-						<img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento">
-						<span class="card-information-title">70% de emparejamiento</span>
-					</div>
-				</div>
-			</section>
-		</li>
+		<driver-card />
+		<driver-card />
+		<driver-card />
+		<driver-card />
+		<driver-card />
 
 	</ul>
 
