--- a/apps/client/src/app/pages/available-drivers/available-drivers.component.css
+++ b/apps/client/src/app/pages/available-drivers/available-drivers.component.css
@@ -18,56 +18,25 @@ section {
 	justify-content: center;
 }
 
-.card {
-	border-radius: 16px;
-	padding: 0 .6rem;
-	border: 3px solid #bab3c7;
+.checkbox-container {
 	width: 100%;
-	display: flex;
 	margin-top: 1rem;
-	justify-content: center;
-	align-items: center;
-	gap: 1rem;
 }
 
-.card-row {
-	display: flex;
-	justify-content: left;
-	align-items: center;
-	gap: 0.6rem;
+.only-woman-checkbox {
+	display: none;
 }
 
-.avatar {
-	width: 2.9375rem;
-	aspect-ratio: 1;
-	border-radius: 100%;
-	margin: 0.5rem 0;
+.only-woman-label {
+	color: #f92564;
+	border: 2px solid #f92564;
+	border-radius: 16px;
+	font-weight: 500;
+	padding: 8px 10px;
+	transition: all 0.2s;
 }
 
-.driver-name {
-	color: var(--primary-text-value);
-}
-
-.card-information-title {
-	color: var(--primary-text-placeholder);
-}
-
-.rating-information {
-	display: flex;
-	align-items: center;
-	gap: .1875rem;
-}
-
-.rating-icon {
-	width: 1.25rem;
-}
-
-.card-information {
-	display: flex;
-	align-items: center;
-	gap: .1875rem;
-}
-
-.card-information-icon {
-	width: var(--icon-s);
+.only-woman-label:has(.only-woman-checkbox:checked) {
+	color: white;
+	background-color: #f92564;
 }
