--- a/apps/client/src/app/pages/route-selection/route-selection.component.html
+++ b/apps/client/src/app/pages/route-selection/route-selection.component.html
@@ -1,3 +1,4 @@
 <page-layout [hasTabBar]="true">
 	<p>hola aqui se muestra las rutas</p>
+	<button (click)="computeRoutes()">Test</button>
 </page-layout>
