--- a/apps/client/src/app/pages/route-selection/route-selection.component.html
+++ b/apps/client/src/app/pages/route-selection/route-selection.component.html
@@ -1,14 +1,14 @@
 <main class="container">
 	<google-map height="700px" width="100%" [options]="options" [center]="center">
-		<map-marker [options]="markerOptions" [position]="markerPosition"></map-marker>
-		@for (p of polylines; track $index) {
-		<map-polyline [path]="p" [options]="{
-			strokeColor: $index === 1 ? '#0096FF' : '#999999',
+		<map-marker [options]="markerOptions" [position]="ucabMarkerPosition"></map-marker>
+		@for (r of routes; track $index) {
+		<map-polyline [path]="r.vertices" [options]="{
+			strokeColor: r.selected ? '#0096FF' : '#999999',
 			strokeOpacity: 1.0,
 			strokeWeight: 8,
-			zIndex: $index === 1 ? 1 : 0
-		}"></map-polyline>
+			zIndex: r.selected ? 1 : 0
+		}" (polylineClick)="handlePolylineClick(r)"></map-polyline>
 		}
 	</google-map>
-	<button mButton (click)="computeRoutes()">Test</button>
+	<button mButton size="large" (click)="computeRoutes()">(TEST) my location</button>
 </main>
