feat: add passenger list component

--- a/apps/client/src/app/pages/offer-travel/offer-travel.component.html
+++ b/apps/client/src/app/pages/offer-travel/offer-travel.component.html
@@ -17,11 +17,11 @@
 		</div>
 		<div class="card-vehicle-info">
 			<div class="vehicle-details">
-				<h4 class="label-medium vehicle-title">Chevrolet | Spark</h4>
-				<h4 class="label-medium vehicle-plate">A17BN1E</h4>
+				<h4 class="label-medium vehicle-title">{{v.brand}} | {{v.model}}</h4>
+				<h4 class="label-medium vehicle-plate">{{v.plate}}</h4>
 			</div>
 			<div class="vehcicle-specs">
-				<p class="label-medium spec-item">4</p>
+				<p class="label-medium spec-item">{{v.seatQuantity}}</p>
 				<p class="label-medium spec-item">Rojo</p>
 			</div>
 		</div>
